--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -12,11 +12,14 @@ dataset:
   distribution: iid  # Options: iid, non-iid
 
 # Topology
-netwotk:
+network:
   num_clients: 10
-  topology: random # Options: TODO
-  selection_method: random
+  topology: random # Options: ring, random, fullycon, star, smallwrld, grid, women, karate, floorent
+  edge_proba: 0.3 # For random topology
+  k: 4
+  p: 0.3
 
+selection_method: random
 selction_ratio: 0.5 # Ratio of neighbors selected (== 1 for broadcast)
 dist: eucl # Options: eucl, cos 
 
