--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,10 +2,7 @@
 epochs: 5
 rounds: 50
 rounds_patience: 5
-lr: 0.01
-optimizer: sgd  # Options: sgd, adam
 
-rho: 0.8 # mixing parameter for model update
 
 dataset:
   name: mnist  # Options: mnist, cifar10
@@ -21,9 +18,14 @@ network:
   k: 4
   p: 0.3
 
-selection_method: random
-selction_ratio: 0.5 # Ratio of neighbors selected (== 1 for broadcast)
-dist: eucl # Options: eucl, cos 
+client:
+  lr: 0.01
+  optimizer: SGD  # Options: SGD, Adam
+  rho: 0.1 # mixing parameter for model update
+
+  selection_method: random
+  selction_ratio: 0.5 # Ratio of neighbors selected (== 1 for broadcast)
+  dist: eucl # Options: eucl, cos 
 
 
 # Hydra configuration for the project. DO NOT TOUCH!
