--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -15,18 +15,19 @@ network:
   num_clients: 10
   topology: random # Options: ring, random, fullycon, star, smallwrld, grid, women, karate, floorent
   edge_proba: 0.4 # For random topology
-  k: 4
-  p: 0.3
+  k: 4 # for random topology
+  p: 0.3 # for random topology
 
 client:
   lr: 0.01
   optimizer: SGD  # Options: SGD, Adam
   rho: 0.1 # mixing parameter for model update
 
-  selection_method: random
-  selction_ratio: 0.5 # Ratio of neighbors selected (== 1 for broadcast)
+  selection_method: heatkernel # Options: random, broadcast, heatkernel, spectrclust
+  selection_ratio: 0.5 # Ratio of neighbors selected
   dist: eucl # Options: eucl, cos 
-
+  num_eig: 3 # Numeber of eigenvalues to consider (<= num_clients)
+  t: 40 # Diffusion time, small = local, large = global
 
 # Hydra configuration for the project. DO NOT TOUCH!
 hydra:
