--- a/configs/config_eucl.yaml
+++ b/configs/config_eucl.yaml
@@ -20,7 +20,7 @@ network:
   p: 0.3 # for random topology
 
 client:
-  model: mnistCNN # NOTE: Not used for now
+  architecture: mnistCNN # NOTE: Not used for now
   lr: 0.01
   epochs: 5
   optimizer: SGD  # Options: SGD, Adam
@@ -28,7 +28,7 @@ client:
   selection_ratio: 0.5 # Ratio of neighbors selected
   
   selection_method: spectr # Options: random, broadcast, heatkernel, spectrclust
-  dist: cosine # Options: eucl, cosine 
+  dist: eucl # Options: eucl, cosine 
   num_eig: 3 # Numeber of eigenvalues to consider (<= num_clients)
   t: 40 # Diffusion time, small = local, large = global
   tau: 1 # Temperature for client selection
