add configs, changed decentralized training

--- a/configs/network/women.yaml
+++ b/configs/network/women.yaml
@@ -1,5 +1,5 @@
 num_clients: 10
 topology: women # Options: ring, random, fullycon, star, smallwrld, grid, women, karate, floorent
 edge_proba: 0.4 # For random topology
-k: 4 # for random topology
-p: 0.3 # for random topology
+k: 4 # for smallwrld topology
+p: 0.3 # for smallwrld topology
