--- a/configs/dataset/mnist_niid.yaml
+++ b/configs/dataset/mnist_niid.yaml
@@ -1,4 +1,4 @@
 name: mnist  # Options: mnist, cifar10
-partition: dirichlet  # Options: iid, dirichlet
+partition: dir  # Options: iid, dir
 batch_size: 64
 alpha: 0.3 # For dirichlet
