--- a/configs/client/random.yaml
+++ b/configs/client/random.yaml
@@ -5,7 +5,7 @@ optimizer: SGD  # Options: SGD, Adam
 rho: 0.1 # mixing parameter for model update
 selection_ratio: 0.5 # Ratio of neighbors selected
 
-selection_method: broadcast # Options: random, broadcast, heatkernel, spectrclust
+selection_method: random # Options: random, broadcast, heatkernel, spectrclust
 dist: cosine # Options: eucl, cosine 
 num_eig: 3 # Numeber of eigenvalues to consider (<= num_clients)
 t: 40 # Diffusion time, small = local, large = global
