--- a/configs/client/heatkern_t40.yaml
+++ b/configs/client/heatkern_t40.yaml
@@ -2,7 +2,7 @@ architecture: mnistCNN # NOTE: Not used for now
 lr: 0.01
 epochs: 5
 optimizer: SGD  # Options: SGD, Adam
-rho: 0.1 # mixing parameter for model update
+rho: 1.0 # mixing parameter for model update (1-rho)*own + rho*received_avg
 selection_ratio: 0.5 # Ratio of neighbors selected
 
 selection_method: spectrclust # Options: random, broadcast, heatkernel, spectrclust
