--- a/configs/client/broadcast.yaml
+++ b/configs/client/broadcast.yaml
@@ -1,4 +1,4 @@
-selection_method: broadcast # Options: random, broadcast, heatkernel, spectrclust
+selection_method: broadcast # Options: random, broadcast, heatkernel, spectrclust, nofed
 selection_ratio: 1.0 # Ratio of neighbors selected
 dist: cosine # Options: eucl, cosine 
 num_eig: 3 # Numeber of eigenvalues to consider (<= num_clients)
