--- a/configs/client/nofed.yaml
+++ b/configs/client/nofed.yaml
@@ -1,5 +1,5 @@
-selection_method: spectrclust # Options: random, broadcast, heatkernel, spectrclust, nofed
-selection_ratio: 0.5 # Ratio of neighbors selected
+selection_method: nofed # Options: random, broadcast, heatkernel, spectrclust, nofed
+selection_ratio: 0.0 # Ratio of neighbors selected
 dist: cosine # Options: eucl, cosine 
 num_eig: 3 # Numeber of eigenvalues to consider (<= num_clients)
 t: 40 # Diffusion time, small = local, large = global
