--- a/configs/client/heatkern_t40.yaml
+++ b/configs/client/heatkern_t40.yaml
@@ -1,6 +1,6 @@
-selection_method: spectrclust # Options: random, broadcast, heatkernel, spectrclust, nofed
+selection_method: heatkernel # Options: random, broadcast, heatkernel, spectrclust, nofed
 selection_ratio: 0.5 # Ratio of neighbors selected
 dist: cosine # Options: eucl, cosine 
 num_eig: 3 # Numeber of eigenvalues to consider (<= num_clients)
-t: 40 # Diffusion time, small = local, large = global
+t: 4 # Diffusion time, small = local, large = global
 tau: 1 # Temperature for client selection
