--- a/configs/client/random.yaml
+++ b/configs/client/random.yaml
@@ -1,4 +1,4 @@
-selection_method: random # Options: random, broadcast, heatkernel, spectrclust, nofed
+selection_method: random # Options: random, broadcast, heatkernel, spectrclust, nofed, gradients
 selection_ratio: 0.5 # Ratio of neighbors selected
 dist: cosine # Options: eucl, cosine 
 num_eig: 3 # Numeber of eigenvalues to consider (<= num_clients)
